--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,19 @@
-spring.datasource.hikari.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=Asia/Seoul
-spring.datasource.hikari.connection-timeout=2000
-spring.datasource.hikari.minimum-idle=10
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.username=tester
-spring.datasource.hikari.password=QWEqwe123!@#
-mybatis.type-aliases-package=com.guruguruzom.dbc.mapper
+# 데이터 소스 (Data Source)
+spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/voc?serverTimezone=Asia/Seoul&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.hikari.username=root
+spring.datasource.hikari.password=qwe123!@#
+
+# Resource and Thymeleaf Refresh
+spring.devtools.livereload.enabled=true
+spring.thymeleaf.cache=false
+
+# JPA Properties
+spring.jpa.database=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
