--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	
+	implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
+  	implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
 }
 
 tasks.named('test') {
